[gd_scene format=3 uid="uid://djdcjn3f0srac"]

[ext_resource type="Script" uid="uid://cwv1ndx4s548q" path="res://addons/spatial_remarks/sr_dock/sr_data_row.gd" id="1_4lw6w"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8syt2"]
resource_local_to_scene = true
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.093160845, 0.093160845, 0.09316083, 0.6)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[node name="SrDataRow" type="PanelContainer" unique_id=948769076 node_paths=PackedStringArray("_version_label", "_position_label", "_target_node_label", "_author_label", "_scene_label", "_text_label")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_8syt2")
script = ExtResource("1_4lw6w")
_selected_color = Color(0.16319999, 0.24, 0.18368, 0.69411767)
_version_label = NodePath("HBoxContainer/VersionLabel")
_position_label = NodePath("HBoxContainer/PositionLabel")
_target_node_label = NodePath("HBoxContainer/TargetNodeLabel")
_author_label = NodePath("HBoxContainer/AuthorLabel")
_scene_label = NodePath("HBoxContainer/SceneLabel")
_text_label = NodePath("HBoxContainer/TextLabel")

[node name="HBoxContainer" type="HBoxContainer" parent="." unique_id=2115288221]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 2

[node name="AuthorLabel" type="Label" parent="HBoxContainer" unique_id=1760443710]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "Someone"
text_overrun_behavior = 3

[node name="VersionLabel" type="Label" parent="HBoxContainer" unique_id=1077649591]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "vX.X.XX"
text_overrun_behavior = 3

[node name="SceneLabel" type="Label" parent="HBoxContainer" unique_id=731281497]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "Examplescene"
text_overrun_behavior = 3

[node name="TargetNodeLabel" type="Label" parent="HBoxContainer" unique_id=255994552]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "XX"
text_overrun_behavior = 3

[node name="PositionLabel" type="Label" parent="HBoxContainer" unique_id=1511835587]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "(?,?,?)"
text_overrun_behavior = 3

[node name="TextLabel" type="Label" parent="HBoxContainer" unique_id=218992312]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "Lorem ipsum..."
text_overrun_behavior = 3

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
